; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_delete.c_test_refs_delete__remove.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_delete.c_test_refs_delete__remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@packed_test_head_name = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_delete__remove() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @g_repo, align 4
  %3 = load i32, i32* @packed_test_head_name, align 4
  %4 = call i32 @git_reference_lookup(i32** %1, i32 %2, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_reference_free(i32* %6)
  %8 = load i32, i32* @g_repo, align 4
  %9 = load i32, i32* @packed_test_head_name, align 4
  %10 = call i32 @git_reference_remove(i32 %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @g_repo, align 4
  %13 = load i32, i32* @packed_test_head_name, align 4
  %14 = call i32 @git_reference_lookup(i32** %1, i32 %12, i32 %13)
  %15 = call i32 @cl_git_fail(i32 %14)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i32) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_reference_remove(i32, i32) #1

declare dso_local i32 @cl_git_fail(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
